Add VmWarningEvent.