@@ -13,7 +13,6 @@
 package org.eclipselabs.garbagecat.domain;
 
 import static org.eclipselabs.garbagecat.util.jdk.JdkUtil.LogEventType.APPLICATION_LOGGING;
-import static org.eclipselabs.garbagecat.util.jdk.JdkUtil.LogEventType.THREAD_DUMP;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -75,54 +74,61 @@ class TestApplicationLoggingEvent {
     @Test
     void testStackTrace() {
         String logLine = "\tat oracle.jdbc.driver.SQLStateMapping.newSQLException(SQLStateMapping.java:70)";
-        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + THREAD_DUMP + ".");
+        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + APPLICATION_LOGGING + ".");
     }
 
     @Test
     void testStackTraceCausedBy() {
         String logLine = "Caused by: java.sql.SQLException: Listener refused the connection with the following error:";
-        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + THREAD_DUMP + ".");
+        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + APPLICATION_LOGGING + ".");
     }
 
     @Test
     void testStackTraceEllipses() {
         String logLine = "\t... 56 more";
-        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + THREAD_DUMP + ".");
+        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + APPLICATION_LOGGING + ".");
     }
 
     @Test
     void testJBossDivider() {
         String logLine = "=========================================================================";
-        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + THREAD_DUMP + ".");
+        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + APPLICATION_LOGGING + ".");
     }
 
     @Test
     void testJBossBootstrapEnvironement() {
         String logLine = "  JBoss Bootstrap Environment";
-        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + THREAD_DUMP + ".");
+        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + APPLICATION_LOGGING + ".");
     }
 
     @Test
     void testJBossHome() {
         String logLine = "  JBOSS_HOME: /opt/jboss/jboss-eap-4.3/jboss-as";
-        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + THREAD_DUMP + ".");
+        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + APPLICATION_LOGGING + ".");
     }
 
     @Test
     void testJBossJava() {
         String logLine = "  JAVA: /opt/java/bin/java";
-        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + THREAD_DUMP + ".");
+        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + APPLICATION_LOGGING + ".");
     }
 
     @Test
     void testJBossClasspath() {
         String logLine = "  CLASSPATH: /opt/jboss/jboss-eap-4.3/jboss-as/bin/run.jar:/opt/java/lib/tools.jar";
-        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + THREAD_DUMP + ".");
+        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + APPLICATION_LOGGING + ".");
     }
 
     @Test
     void testJBossJavaOptsWarning() {
         String logLine = "JAVA_OPTS already set in environment; overriding default settings with values: -d64";
-        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + THREAD_DUMP + ".");
+        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + APPLICATION_LOGGING + ".");
+    }
+
+    @Test
+    void testWarning() {
+        String logLine = "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access "
+                + "operations";
+        assertTrue(ApplicationLoggingEvent.match(logLine), "Log line not recognized as " + APPLICATION_LOGGING + ".");
     }
 }
